fixed superscript line-height shift

--- a/app/less/utilities.less
+++ b/app/less/utilities.less
@@ -61,6 +61,7 @@
 
 .superscript {
   vertical-align: super;
+	line-height: 0.1 !important;
   font-size: 12px !important;
   margin: 0 !important;
   color: inherit !important;
